---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 1.1.26
  Features:
    - Missing settings for MK 1 Speed & Cargo.
  Changes:
    - Improved settings descriptions.
    - Setting values tweaked.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 20.12.25
  Features:
    - Settings for MK 1 Roboport.
  Changes:
    - Texture File name change.
    - Prefix change BRE.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 07.12.25
  Features:
    - Forked & changed by SGZ_Creations.
  Changes:
    - Removed Recipe Checks code, recipes bloats in the menu. Why have 2 identical recipes making sort of the same item.
    - Removed Robot selection setting.
  Modding:
    - More bobs changes if mod enabled.
    - Metal & stars support. 
    - Vesta support.
  Info:
    - Removed Settings that i found unnecessary.